--- a/bibliography algorithms.bib
+++ b/bibliography algorithms.bib
@@ -1,34 +1,75 @@
-@article {Scho88,
-author ={Uwe Schöning},
-title={Graph isomorphism is in the low hierarchy} ,
-journal ={Journal of Computer and System Sciences},
-year ={1988},
-volume ={37},
-pages ={312-323}
-}
-@inproceedings{Babai83,
- author = {Babai, L\'{a}szl\'{o} and Luks, Eugene M.},
- title = {Canonical labeling of graphs},
- booktitle = {Proceedings of the fifteenth annual ACM symposium on Theory of computing},
- series = {STOC '83},
- year = {1983},
- isbn = {0-89791-099-0},
- pages = {171--183},
- numpages = {13},
- url = {http://doi.acm.org/10.1145/800061.808746},
- doi = {10.1145/800061.808746},
- acmid = {808746},
- publisher = {ACM},
- address = {New York, NY, USA},
-} 
-@inproceedings{Presa09,
-  author    = {Jos{\'e} Luis L{\'o}pez-Presa and
-               Antonio Fern{\'a}ndez Anta},
-  title     = {Fast Algorithm for Graph Isomorphism Testing},
+% This file was created with JabRef 2.8.1.
+% Encoding: Cp1252
+
+@INPROCEEDINGS{Lopez-Presa2009,
+  author = {Jos{\'e} Luis L{\'o}pez-Presa and Antonio Fern{\'a}ndez Anta},
+  title = {Fast Algorithm for Graph Isomorphism Testing},
   booktitle = {SEA},
-  year      = {2009},
-  pages     = {221-232},
-  ee        = {http://dx.doi.org/10.1007/978-3-642-02011-7_21},
-  crossref  = {DBLP:conf/wea/2009},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  year = {2009},
+  pages = {221-232},
+  __markedentry = {[Koliaza:6]},
+  bibsource = {DBLP, http://dblp.uni-trier.de},
+  crossref = {DBLP:conf/wea/2009},
+  ee = {http://dx.doi.org/10.1007/978-3-642-02011-7_21},
+  owner = {Koliaza},
+  timestamp = {2012.12.06}
 }
+
+@INPROCEEDINGS{Babai1983,
+  author = {Babai, L\'{a}szl\'{o} and Luks, Eugene M.},
+  title = {Canonical labeling of graphs},
+  booktitle = {Proceedings of the fifteenth annual ACM symposium on Theory of computing},
+  year = {1983},
+  series = {STOC '83},
+  pages = {171--183},
+  address = {New York, NY, USA},
+  publisher = {ACM},
+  __markedentry = {[Koliaza:6]},
+  acmid = {808746},
+  doi = {10.1145/800061.808746},
+  isbn = {0-89791-099-0},
+  numpages = {13},
+  owner = {Koliaza},
+  timestamp = {2012.12.06},
+  url = {http://doi.acm.org/10.1145/800061.808746}
+}
+
+@ARTICLE{Wormwald:UniformGeneration,
+  author = {McKay, Brendan D. and Wormald, Nicholas C.},
+  title = {{Uniform generation of random regular graphs of moderate degree}},
+  journal = {Journal of Algorithms},
+  year = {1990},
+  volume = {11},
+  pages = {52--67},
+  number = {1},
+  month = mar,
+  abstract = {{We show how to generate k-regular graphs on n vertices uniformly
+	at random in expected time O(nk3), provided k = O(n1/3). The algorithm
+	employs a modification of a switching argument previously used to
+	count such graphs asymptotically for k = o(n1/3). The asymptotic
+	formula is re-derived, using the new switching argument. The method
+	is applied also to graphs with given degree sequences, provided certain
+	conditions are met. In particular, it applies if the maximum degree
+	is O(E(G)1/4). The method is also applied to bipartite graphs.}},
+  citeulike-article-id = {4486564},
+  citeulike-linkout-0 = {http://dx.doi.org/10.1016/0196-6774(90)90029-E},
+  doi = {10.1016/0196-6774(90)90029-E},
+  issn = {01966774},
+  keywords = {perfect\_sampling, random\_regular\_graphs},
+  posted-at = {2011-09-28 15:06:28},
+  priority = {0},
+  url = {http://dx.doi.org/10.1016/0196-6774(90)90029-E}
+}
+
+@ARTICLE{Schoening1988,
+  author = {Uwe Schöning},
+  title = {Graph isomorphism is in the low hierarchy},
+  journal = {Journal of Computer and System Sciences},
+  year = {1988},
+  volume = {37},
+  pages = {312-323},
+  __markedentry = {[Koliaza:6]},
+  owner = {Koliaza},
+  timestamp = {2012.12.06}
+}
+
