--- a/algorithm paper.lyx
+++ b/algorithm paper.lyx
@@ -26,7 +26,16 @@
 \index_command default
 \paperfontsize default
 \spacing single
-\use_hyperref false
+\use_hyperref true
+\pdf_bookmarks true
+\pdf_bookmarksnumbered false
+\pdf_bookmarksopen false
+\pdf_bookmarksopenlevel 1
+\pdf_breaklinks false
+\pdf_pdfborder true
+\pdf_colorlinks false
+\pdf_backref section
+\pdf_pdfusetitle true
 \papersize default
 \use_geometry true
 \use_amsmath 1
@@ -86,7 +95,7 @@ and  Blanchard Nicolas Koliaza
 
 \end_layout
 
-\begin_layout Section
+\begin_layout Section*
 Foreword 
 \end_layout
 
@@ -104,6 +113,9 @@ The problem considered is the graph isomorphism (GI) problem : given two
  The original goal was to implement the Weisfeiler-Lehman heuristic in the
  C programming language, but we chose to implement our own heuristic to
  test its performance.
+ The precise goal was to find an heuristic which would behave polynomially
+ on the a bigger subset of problems, even if the polynomial degree increases.
+ 
 \end_layout
 
 \begin_layout Section
@@ -122,7 +134,16 @@ We adopt the notations of graphs with n vertices and m edges.
 \end_layout
 
 \begin_layout Standard
-The GI problem lies between the complexity classes P and NP and Schöning
+There is a strong link between GI and algebra : finding an isomorphism is
+ the same as finding a basis in which the adjacency matrix of G becomes
+ that of G'.
+ Testing all solutions is equivalent to testing all permutations and a naïve
+ algorithm would take 
+\begin_inset Formula $n!$
+\end_inset
+
+ operations.
+ The GI problem lies between the complexity classes P and NP and Schöning
  
 \begin_inset CommandInset citation
 LatexCommand cite
@@ -148,10 +169,7 @@ key "Babai1983"
 \end_inset
 
 .
-\end_layout
-
-\begin_layout Standard
-However some efficient heuristics are available, including 
+ However some efficient heuristics are available, including 
 \emph on
 nauty
 \emph default
@@ -176,9 +194,10 @@ key "Lopez-Presa2009"
 
 .
  In our algorithm and test we often consider multi-graphs, as the hard cases
- are much easier to generate for multi-graphs and the heuristic work the
- same.
- 
+ are much easier to generate for multi-graphs and the difference has no
+ impact on our heuristic.
+ Finally, we tried to make an heuristic which would behave well when launched
+ on p different graphs to check if any two are isomorphic.
 \end_layout
 
 \begin_layout Section
@@ -195,7 +214,8 @@ The original Weisfeiler-Lehman (WL) heuristic works by coloring the edges
 \end_layout
 
 \begin_layout Itemize
-We begin with a coloring that assigns to every vertex the same color.
+We begin with a coloring that assigns to every vertex the same color (this
+ is the 1-dimensional version).
 \end_layout
 
 \begin_layout Itemize
@@ -211,22 +231,17 @@ After at most n passes, the colors don't change anymore.
 These rules actually only produce a certificate of non-isomorphism.
  To construct an isomorphism using WL one uses backtracking coupled with
  the fact that the image of a vertex has to be of the same color.
- 
-\end_layout
-
-\begin_layout Standard
-It is easy to see that two isomorphic graphs behave in the same way when
+ It is easy to see that two isomorphic graphs behave in the same way when
  subject to WL coloring, but the converse does not generally hold.
- On G(n,p) graphs, one can show that the probability of two graphs being
- non-isomorphic while admitting the same coloring tends towards 0 as n increases.
- However some special classes of graphs do not behave in such a way, and
- backtracking becomes omnipresent, notably in k-regular graphs, thus leading
- to time complexity up to 
+ Notably, some special classes of graphs make backtracking omnipresent,
+ e.g.
+ in k-regular graphs, thus leading to time complexity up to 
 \begin_inset Formula $O(n^{n})$
 \end_inset
 
 .
- 
+ The heuristic can be improved by changing the initial coloring of the vertices,
+ but we shall only study this case.
 \end_layout
 
 \begin_layout Subsection
@@ -246,7 +261,11 @@ Let
 \begin_inset Formula $V_{k}(x)$
 \end_inset
 
- be the number of neighbours at distance exactly k from x, then if 
+ be the number of neighbours at distance exactly k from x, and 
+\begin_inset Formula $P_{k}(x)$
+\end_inset
+
+ the number of paths of length k starting from x, then if 
 \begin_inset Formula $f$
 \end_inset
 
@@ -262,22 +281,30 @@ Let
 \begin_inset Formula $V_{k}(x)=V_{k}(f(x))$
 \end_inset
 
+ and 
+\begin_inset Formula $P_{k}(x)=P_{k}(f(x))$
+\end_inset
+
 .
  Thus, by computing the different 
 \begin_inset Formula $V_{x}$
 \end_inset
 
- we can prune the search tree and limit the possibilities.
- We name the array of degrees 
-\begin_inset Formula $V_{k}(x)$
+ and 
+\begin_inset Formula $P_{x}$
 \end_inset
 
- for k between 1 and n V(x), and compute an array containing V(x) for each
- x, obtaining the 
+ we can prune the search tree and limit the possibilities.
+ We name the array of couples 
+\begin_inset Formula $P_{k}(x),V_{k}(x)$
+\end_inset
+
+ for k between 1 and n PV(x), and compute an array containing PV(x) for
+ each x, obtaining the 
 \begin_inset Formula $n\times n$
 \end_inset
 
- matrix V.
+ matrix PV.
  
 \end_layout
 
@@ -296,27 +323,90 @@ Lecture and choice of data structure
 \end_layout
 
 \begin_layout Enumerate
-Separation into connex components
-\end_layout
-
-\begin_layout Enumerate
 Primary test phase
 \end_layout
 
 \begin_layout Enumerate
-Construction of the V-array 
+Construction of each PV-array 
 \end_layout
 
 \begin_layout Enumerate
-Sorting of the V-array
+Sorting of each PV-array
 \end_layout
 
 \begin_layout Enumerate
-Comparison of the V-arrays
+Comparison of the PV-arrays
 \end_layout
 
 \begin_layout Enumerate
 If possible construction of an isomorphism using backtracking
+\end_layout
+
+\begin_layout Subsubsection
+First test phase 
+\end_layout
+
+\begin_layout Standard
+The problem with the naïve algorithm is that the number of possibilities
+ groes exponentially in n, however, when one considerons permutations which
+ are composed of one transposition, there are at most 
+\begin_inset Formula $n^{2}$
+\end_inset
+
+possibilities and each take at most 
+\begin_inset Formula $m$
+\end_inset
+
+ operations.
+ The first test phase uses different simple techniques to quickly find a
+ certificate of non-isomorphism or an easy isomorphism when doing so is
+ possible.
+ The tests are run in this order : 
+\end_layout
+
+\begin_layout Enumerate
+Check for equality between the matrices (runs in 
+\begin_inset Formula $O(m)$
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Enumerate
+Check size and number of connected components (in 
+\begin_inset Formula $O(m)$
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Enumerate
+Compare the list of degrees (in 
+\begin_inset Formula $O(m+n*log(n))$
+\end_inset
+
+ ) and record the number of possibilities.
+\end_layout
+
+\begin_layout Enumerate
+When the number of possibilities is small (
+\begin_inset Formula $O(n^{2})$
+\end_inset
+
+) use bruteforce (in 
+\begin_inset Formula $O(n^{2}*m)$
+\end_inset
+
+ ).
+\end_layout
+
+\begin_layout Enumerate
+Still check for simple transpositions when it is not the case ( also in
+ 
+\begin_inset Formula $O(n^{2}*m)$
+\end_inset
+
+ )
 \end_layout
 
 \begin_layout Subsubsection
@@ -329,11 +419,6 @@ The choice of data structures varies between adjacency matrix and list,
  on sparse graphs using lists, while allowing us to know in O(1) if two
  vertices are linked.
  
-\end_layout
-
-\begin_layout Standard
-The primary test phase relies on the degree list and connex components to
- check if a quick certificate of non-isomorphism can be found.
 \end_layout
 
 \begin_layout Standard
@@ -436,6 +521,32 @@ To generate two isomorphic graphs is actually really easy : as two graphs
 
 \begin_layout Section
 Comparison with Weisfeiler-Lehman
+\end_layout
+
+\begin_layout Standard
+Let us suppose one finds a coloring using WL that produces a certificate
+ of non-isomorphism.
+ It does so at the 
+\begin_inset Formula $k^{th}$
+\end_inset
+
+iteration.
+ If 
+\begin_inset Formula $k=1$
+\end_inset
+
+ then it is simply that the degree list that mattered and our heuristic
+ also managed to notice it (it does it quickly thanks to the primary test
+ phase, but the PV-array would suffice).
+ Now suppose that the two colorings are incompatible, it means that the
+ number of vertex of one color isn't the same in both graphs.
+ That means that there are two vertices such that they were identically
+ colored at 
+\begin_inset Formula $k-1$
+\end_inset
+
+ but that their neighbourhood were not identically colored.
+ 
 \end_layout
 
 \begin_layout Standard
