--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@ check neighbours of the PN arrays
 less important
 follow the number of possibilities and state of the program
 handle k graphs
+fix k-regular generator
 
 less
 in the 2-graph comparison case compare at each multiplication of PN
